--- a/Spotify_wrapped_workshop.ipynb
+++ b/Spotify_wrapped_workshop.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/HannahAlexander/disaster-tweets/blob/main/Spotify_wrapped_workshop.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/HannahAlexander/disaster-tweets/blob/our_data/Spotify_wrapped_workshop.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -23,7 +23,7 @@
         "\n",
         "1. Import python packages required to run the notebook\n",
         "\n",
-        "2. Import your personal Spotify Data\n",
+        "2. Import Spotify Data\n",
         "\n",
         "3. Print your most listened to artist, song & genre\n",
         "\n",
