--- a/Spotify_wrapped_workshop.ipynb
+++ b/Spotify_wrapped_workshop.ipynb
@@ -25,9 +25,9 @@
         "\n",
         "2. Import Spotify Data\n",
         "\n",
-        "3. Print your most listened to artist, song & genre\n",
+        "3. Print their most listened to artist, song & genre\n",
         "\n",
-        "4. Discover in which month you listened to the most music\n",
+        "4. Discover in which month they listened to the most music\n",
         "\n",
         "4. Bar chart\n",
         "\n",
@@ -35,36 +35,6 @@
         "    \n",
         "6. Wordcloud"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "# **TASK 0: Loading in your spotify data**\n",
-        "---\n",
-        "\n",
-        "Before we get started - we need to load in the data to be used in this exercise\n",
-        "\n",
-        "1. Locate the files:\n",
-        "\n",
-        "StreamingHistory_music_0.json\n",
-        "StreamingHistory_music_1.json\n",
-        "StreamingHistory_music_2.json\n",
-        "\n",
-        "(you might have more of these, for example StreamingHistory_music_3.json, if thats the case locate any that begin with StreamingHistory)\n",
-        "\n",
-        "2. On the lefthand side of this webpage click the folder icon & click it\n",
-        "3. right click in the pane that opens up and select upload\n",
-        "4. Find & select all the files you located (hold CTRL as you click them to select more than one)\n",
-        "5. Click open\n",
-        "6. They should appear in the left hand pane\n",
-        "\n",
-        "Raise your hand if you have any problems with this\n",
-        "\n",
-        "If you don't have your own data let us know and we can give you data"
-      ],
-      "metadata": {
-        "id": "kKv6gHmbQ2EX"
-      }
     },
     {
       "cell_type": "markdown",
@@ -516,7 +486,7 @@
         "id": "ZzYJwElbo4DV"
       },
       "source": [
-        "# **Task 6: Plot of most played artist by season**\n",
+        "# **Task 5: Plot of most played artist by season**\n",
         "---\n",
         "\n",
         "Next, lets see what time of year you listen to your most played artists!\n",
@@ -565,7 +535,7 @@
         "id": "DRSY4_u2o4DV"
       },
       "source": [
-        "# **Task 7: Plot pie chart of most listened genres**\n",
+        "# **Task 6: Plot pie chart of most listened genres**\n",
         "---\n",
         "Next, lets make a pie chart of our most listened genres!\n",
         "\n",
@@ -605,7 +575,7 @@
         "id": "QLYWxvM_o4DV"
       },
       "source": [
-        "# **Task 8: Wordcloud of song adjectives**\n",
+        "# **Task 7: Wordcloud of song adjectives**\n",
         "---\n",
         "A wordcloud is a visualisation where the size of the word reflects the size of the value.\n",
         "\n",
@@ -646,7 +616,7 @@
         "id": "ZYoDlnceo4DW"
       },
       "source": [
-        "# **Task 9: Create a model to predict which genre to listen to based on the date and time of day**\n",
+        "# **Task 8: Create a model to predict which genre to listen to based on the date and time of day**\n",
         "---\n",
         "Run the cell below to predict which genre you should listen to based on the date and time of day!\n",
         "\n",
