--- a/Spotify_wrapped_workshop.ipynb
+++ b/Spotify_wrapped_workshop.ipynb
@@ -57,8 +57,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "dQAENND1o4DR",
-        "cellView": "form"
+        "id": "dQAENND1o4DR"
       },
       "outputs": [],
       "source": [
@@ -84,7 +83,8 @@
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.metrics import accuracy_score\n",
         "import os\n",
-        "from google.colab import drive"
+        "from google.colab import drive\n",
+        "import calendar"
       ]
     },
     {
@@ -295,7 +295,7 @@
         "\n",
         "**Ensure that you replace the #INSERT with the required column names.**\n",
         "\n",
-        "*Hint: The column names you need are one of:* ```\"ArtistName\"```, ```\"followers\"```, ```\"trackName\"```, ```\"popularity\"```, ```\"genre\"```\n",
+        "*Hint: The column names you need are one of:* ```\"artistName\"```, ```\"followers\"```, ```\"trackName\"```, ```\"popularity\"```, ```\"genre\"```\n",
         "\n",
         "*Hint #2: dont forget \" \"*\n",
         "\n"
@@ -368,7 +368,7 @@
         "\n",
         "1. Run the first cell to see which year you listened to the most music.\n",
         "\n",
-        "2. Then, replace #INSERT in the next cell with the correct column nmae to determine which month you listened to the most music."
+        "2. Then, replace #INSERT in the next cell with the correct column name to determine which month you listened to the most music."
       ]
     },
     {
@@ -391,6 +391,15 @@
         "grouped_by_year = all_data.groupby('Year')['Seconds Played'].sum()\n",
         "grouped_by_year"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "VEwZqWrkdVHh"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
